fix: add year to TV show folder name and fix first episode parsing
- folder.rs: Add year field to generate_tvshow_folder() output
  Format: [ShowName](Year)-imdb-tmdb instead of [ShowName]-imdb-tmdb

- planner.rs: Fix first episode not getting proper TMDB metadata
  When the first file in a TV show directory is processed via AI path
  (no cache), and AI fails to parse season/episode from filename,
  now fallback to regex extraction before querying TMDB for episode details.
  This ensures E01 gets proper episode names like '死者的不在场证明'
  instead of generic 'Episode 1'.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Additional utilities
 urlencoding = "2.1"
 dirs = "5.0"
+regex = "1.10"
 
 [dev-dependencies]
 tempfile = "3.9"
