perf: add three performance optimizations
1. Cache entire season info (one TMDB call per season instead of per episode)
   - Uses get_season_details API to fetch all episodes at once
   - Reduces TMDB API calls by ~80-90% for TV shows

2. Parallel ffprobe execution (up to 8 concurrent)
   - Uses futures::stream::buffer_unordered for concurrent metadata extraction
   - Precomputes all video metadata before planning phase

3. Parallel poster downloads (up to 4 concurrent)
   - Separates download operations from sequential operations
   - Executes all downloads in parallel during execute phase

Added futures = "0.3" dependency for async stream processing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 urlencoding = "2.1"
 dirs = "5.0"
 regex = "1.10"
+futures = "0.3"
 
 [dev-dependencies]
 tempfile = "3.9"
