--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ urlencoding = "2.1"
 dirs = "5.0"
 regex = "1.10"
 futures = "0.3"
+zip = "2.2"
+whoami = "1.5"
 
 [dev-dependencies]
 tempfile = "3.9"
